--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+CYQ_RELEASE_STORE_FILE=cyq-release-key.keystore
+CYQ_RELEASE_STORE_PASSWORD=
+CYQ_RELEASE_KEY_ALIAS=
+CYQ_RELEASE_KEY_PASSWORD=
